[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uesgraphs"
version = "2.1.1"
description = "Graphs to describe Urban Energy Systems"
authors = [{name = "Rahul Mohandasan Karuvingal", email = "rahul.karuvingal@eonerc.rwth-aachen.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "geopandas",
    "networkx>=2.1",
    "numpy",
    "pandas",
    "shapely",
    "pyproj",
    "matplotlib",
    "scikit-learn",
    "mako",
    "dxfgrabber",
    "seaborn",
    "openpyxl",
    "pyarrow",
    "ipykernel",
    "scipy",
    "pytest>=6.0",
    "pytest-mpl>=0.12",
    "pytest-cov>=4.0.0,<5.0.0",
    "coverage>=7.0.0,<8.0.0",
    "tomli>=1.2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pyyaml",
]
templates = [
    "OMPython>=3.4.0,<4.0.0",
]

[project.urls]
repository = "https://github.com/RWTH-EBC/uesgraphs"

[tool.aixlib]
compatible_aixlib_version = "2.1.1"

[tool.setuptools]
packages = ["uesgraphs"]

[tool.pytest.ini_options]
#addopts = "--ignore=tests/test_modelgen.py --ignore=tests/test_uesmodel.py"
testpaths = ["tests"]
python_files = [
    "test_*.py",
    "__init__.py"
]
# Remove the --mpl flag entirely for now
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]

[tool.coverage.run]
source = ["uesgraphs"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/examples/*",
    "*/backup files/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.xml]
output = "coverage.xml"