[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uesgraphs"
version = "2.1.4"
description = "Automated graph-based simulation model generation and analysis tool"
authors = [{name = "Rahul Mohandasan Karuvingal", email = "rahul.karuvingal@eonerc.rwth-aachen.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "geopandas",
    "networkx>=2.1",
    "numpy",
    "pandas",
    "shapely",
    "pyproj",
    "matplotlib",
    "scikit-learn",
    "mako",
    "dxfgrabber",
    "seaborn",
    "openpyxl",
    "pyarrow",
    "ipykernel",
    "scipy",
    "tomli>=1.2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pyyaml",
    "pytest>=6.0",
    "pytest-mpl>=0.12",
    "pytest-cov>=4.0.0,<5.0.0",
    "coverage>=7.0.0,<8.0.0",
]

templates = [
    "OMPython>=3.4.0,<4.0.0",
]
full = [
    "pyyaml",
    "pytest>=6.0",
    "pytest-mpl>=0.12",
    "pytest-cov>=4.0.0,<5.0.0",
    "coverage>=7.0.0,<8.0.0",
    "OMPython>=3.4.0,<4.0.0",
]

pandapipes = [
    "pandapipes==0.13.0"
]

[project.urls]
repository = "https://github.com/RWTH-EBC/uesgraphs"

[tool.aixlib]
compatible_aixlib_version = "<= '2.1.1'"

[tool.setuptools]
packages = ["uesgraphs", "uesgraphs.analyze", "uesgraphs.analyze.data_handling", 
            "uesgraphs.examples", "uesgraphs.systemmodels", "uesgraphs.uesmodels", 
            "uesgraphs.uesmodels.utilities"]

[tool.setuptools.package-data]
uesgraphs = [
    "data/**/*",
    "data/templates/**/*.mako",
    "data/pipe_catalogs/*.csv",
    "data/examples/**/*"
]

[tool.setuptools.exclude-package-data]
uesgraphs = [
    "**/__pycache__",
    "**/*.pyc"
]

[tool.pytest.ini_options]
#addopts = "--ignore=tests/test_modelgen.py --ignore=tests/test_uesmodel.py"
testpaths = ["tests"]
python_files = [
    "test_*.py",
    "__init__.py"
]
# Remove the --mpl flag entirely for now
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]

[tool.coverage.run]
source = ["uesgraphs"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/examples/*",
    "*/backup files/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.xml]
output = "coverage.xml"